<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_posts"
            android:title="@string/drawer_posts"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/menu_upvotes"
            android:title="@string/drawer_upvotes"
            android:icon="@drawable/ic_plus_one"/>
        <item
            android:id="@+id/drawer_map_feed"
            android:title="@string/drawer_map_feed"
            android:icon="@drawable/ic_location_24"/>

    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_account"
            android:title="@string/drawer_account"
            android:icon="@drawable/ic_person_black_24dp"/>

        <item
            android:id="@+id/drawer_setting"
            android:title="@string/drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
    </group>
</menu>